# agentic-research-kit

./: .env.defaults  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PHOENIX.md  README.md  TESTING.md  docker-compose.yml  main.py  nanobot_adaptation_roadmap.md  pyproject.toml
.github/workflows/: ci.yml
data/: research_golden_dataset.csv
docs/: ARCHITECTURE_DIAGRAMS.md  ARK_NANOBOT_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LIGHTRAG_INTEGRATION.md  LIGHTRAG_THREAD_ISOLATION.md  LOCAL_OPTIMIZATION.md  LOGGING.md  PHOENIX.md  QWEN35_ARCHITECTURE_RESEARCH.md  RAGAS_USAGE.md  ROADMAP.md  TESTING.md  VLLM_INTEGRATION.md  nanobot_adaptation_roadmap.md
examples/: batch_ingest.py  custom_agent.py  custom_data_source.py  custom_prompts.py  research_biased_ai.py  simple_query.py
scripts/: run_ragas_eval.py  start_phoenix.bat  start_phoenix.sh  verify_react_loop.py
skills/: academic_research.md
src/: __init__.py
src/agents/: __init__.py  base_state.py  bus.py  direct_lightrag_retriever.py  embeddings.py  enhanced_response_generator.py  enhanced_retriever.py  errors.py  isolated_lightrag.py  lancedb_storage.py  lightrag_client.py  model_selector.py  prompts.py  providers.py  reranker.py  research_tasks.py  retry.py  simple_retriever.py  skills.py  utils.py  verification.py  worker.py  workflow.py
src/agents/channels/: base.py  manager.py  telegram.py
src/agents/memory/: __init__.py  store.py
src/agents/subgraphs/: rag_search.py  web_search.py
src/agents/tools/: __init__.py  base.py  mcp.py  registry.py  web.py
src/agents/tools/rag_tools/: __init__.py  deep_dive.py  entity_extractor.py  hybrid_retriever.py  reranker.py  simple_retriever.py
src/api/: __init__.py  main.py
src/data_ingestion/: __init__.py  document_loaders.py  generic_csv_parser.py  generic_rag_ingester.py  image_downloader.py  universal_pipeline.py
src/evaluation/: __init__.py  ragas_evaluator.py  simple_eval.py
src/utils/: __init__.py  config.py  logger.py  logging.py  observability.py  vision_embedding.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_lancedb_storage.py  test_ragas_evaluator.py  test_workflow.py
tests/test_agents/: test_adaptation.py  test_bus.py  test_channel_manager_bus.py  test_embeddings.py  test_enhanced_response_generator.py  test_enhanced_retriever.py  test_isolated_lightrag.py  test_lightrag_client.py  test_lightrag_retriever_direct.py  test_mcp.py  test_prompts.py  test_query_analyzer.py  test_qwen_wrapper.py  test_reranker.py  test_research_tasks.py  test_response_generator.py  test_retriever.py  test_retry.py  test_simple_retriever.py  test_tools_rag.py  test_tools_web.py  test_utils.py  test_verification.py  test_worker.py  test_workflow_observability.py
tests/test_api/: test_endpoints.py
tests/test_data_ingestion/: test_document_loaders.py  test_generic_csv_parser.py  test_generic_rag_ingester.py  test_image_downloader.py  test_universal_pipeline.py
tests/test_utils/: test_logging.py  test_vision_embedding.py  test_vision_embedding_logic.py
tests/unit_local/: test_memory_usage.py  test_model_load.py  test_unified_model.py
